# gen-ai-projects

./: .gitignore  main.py  pyproject.toml  test_weather.py
banking_fraud_mcp/: .dockerignore  .env.example  DOCKER.md  DOCKER_DEPLOYMENT_SUCCESS.md  DOCKER_ML_ENHANCEMENTS.md  Dockerfile  ML_ARCHITECTURE.md  ML_TRAINING_SUMMARY.md  PROJECT_SUMMARY.md  README.md  batch_fraud_client.py  client.py  db_setup.py  docker-compose.yml  docker-manage.sh  enhanced_client.py  fraud_client.py  fraud_server.py  fraud_tool.py  manage_server.sh  mcp_fraud_client.py  ml_fraud_detector.py  pyproject.toml  quick_test.py  retrain_ml_model.py  simple_fraud_client.py  test_docker_fraud_system.sh  test_ml_client.py  test_statistics_mcp.py  validate_model.py
banking_fraud_mcp/data/models/: feature_scaler.joblib  isolation_forest.joblib
banking_fraud_mcp/models/: feature_columns.joblib  feature_scaler.joblib  isolation_forest.joblib
banking_fraud_mcp/monitoring/: prometheus.yml
clinical-decision-support/: .gitignore  requirements.txt
e-commerce-assistant/: CLAUDE_DESKTOP_INTEGRATION.md  LANGCHAIN_INTEGRATION_GUIDE.md  LANGCHAIN_MANAGEMENT_COMPLETE.md  LANGCHAIN_SUCCESS_SUMMARY.md  MANAGE_SCRIPT_GUIDE.md  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_IMPLEMENTATION.md  README.md  api_server.py  db_setup.py  demo_langchain_integration.py  langchain_agent.py  langchain_api_server.py  main.py  manage_langchain_agent.sh  manage_servers.sh  mcp_server.py  mcp_server_old.py  pyproject.toml  quickstart_langchain.sh  rag_assistant.py  setup_claude_integration.sh  test_api.py  test_cli_direct.sh  test_langchain_integration.py  test_mcp.py  test_mcp_simple.py  test_rag_comprehensive.py  test_services.py
e-commerce-assistant/orchestration/: manage_services.sh  service_manager.py
e-commerce-assistant/services/: base_mcp_service.py  chat_mcp_service.py  gateway_mcp_service.py  order_mcp_service.py  product_mcp_service.py  recommendation_mcp_service.py
hr-assistant/: .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.api  Dockerfile.rag  Dockerfile.simple  GUARDRAILS_IMPLEMENTATION.md  GUARDRAILS_SUCCESS.md  README.md  README_COMPLETE.md  README_MongoDB.md  STREAMLIT_README.md  api_server_mongodb.py  check_data.py  comprehensive_api.py  consecutive_chunking.py  cumulative_chunking.py  (+27 more)
spending-insights-budgeting/: .dockerignore  .env.docker  .env.example  Dockerfile  Dockerfile.api  Dockerfile.simple  LICENSE  README.md  db_setup.py  docker-compose.yml  docker-manage.sh  main.py  manage.sh  pyproject.toml  redact.py  requirements.txt  requirements_clean.txt  requirements_docker.txt  streamlit_app.py  vectorstore.py
web-scraping/: README.md  WIKIPEDIA_RAG_SUCCESS.md  batch_wikipedia_rag.py  chatbot_api_server.py  chromadb_cli.py  frontend_server.py  health_data_rag.py  interactive_wikipedia_rag.py  llm_client.py  pyproject.toml  start_chatbot.sh  test_chatbot_api.py  wikipedia_rag_scraper.py
web-scraping/chatbot-frontend/: app.js  index.html  style.css
(+57 files in other folders)
