[project]
name = "gen-ai-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.0.0",
    "joblib>=1.5.1",
    "langchain-groq>=0.3.6",
    "mcp-use>=1.3.7",
    "mcp[cli]>=1.12.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "rpds-py>=0.10.0",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.2",
]
